--- a/cleandata.Rmd
+++ b/cleandata.Rmd
@@ -6,30 +6,38 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+library(dplyr)
+library(stringr)
+
+```
+```{r data cleaning, include=FALSE}
+NY<-data|>
+  filter(str_detect(city, regex("New York", ignore_case = TRUE)))
+
+
 clean<-
   data|>
-  janittor
+  janitor::clean_names()|>
+  filter(str_detect(categories, regex("restaurant", ignore_case = TRUE))) 
 
+clean |>
+   group_by(state) |>
+  summarize(count = n()) |>
+  arrange(desc(count))
 
-filter(str_detect(category, regex("restaurant", ignore_case = TRUE)))
+PA<-
+  clean|>
+  filter(state == "PA") 
+unique(PA$city)
+category_summar<-
+  PA |>
+  separate_rows(categories, sep = ",\\s*")|>
+  group_by(categories) |>
+  summarize(count = n()) |>
+  arrange(desc(count))
+
+print(category_summary)
+
+write.csv(PA, "PA.csv", row.names = FALSE)
+
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
