--- a/cleandata.Rmd
+++ b/cleandata.Rmd
@@ -156,5 +156,5 @@ PAhour <- mergedPA %>%
 
 
 print(PAhour)
-save(mergedPA, file = "data/PAhour.RData")
+save(PAhour, file = "data/PAhour.RData")
 ```
