basic structure of website

--- a/Angelplot.Rmd
+++ b/Angelplot.Rmd
@@ -12,6 +12,7 @@ library(cluster)
 library(plotly)
 load("data/mergedPA.RData")
 library(ggplot2)
+library(tigris)
 library(sf) 
 ```
 
@@ -140,28 +141,35 @@ plot_ly(
 
 ```{r, fig.width = 8, fig.asp = 0.8}
 
-pa_counties <- st_read(here::here("PACounty", "tl_rd22_42_cousub.shp"), quiet = TRUE)
+pa_counties <- counties(state = "PA", class = "sf")
 
+se_pa_counties <- pa_counties %>%
+  filter(NAME %in% c("Philadelphia", "Delaware", "Montgomery", "Chester", "Bucks"))
 
 ggplot() +
-  geom_sf(data = se_pa_counties, color = "black", fill = "lightgrey", size = 0.8) +
+  geom_sf(data = se_pa_counties, color = "black", fill = "lightgrey", size = 0.8) + 
   geom_point(
     data = mergedPA,
     aes(x = longitude, y = latitude, color = stars),
-    size = 0.5, alpha = 0.5) +
+    size = 0.5, alpha = 0.5
+  ) +  
   geom_sf_text(
-    data = pa_counties,
+    data = se_pa_counties,
     aes(label = NAME),
-    size = 2, color = "black", fontface = "bold") +
-  coord_sf(xlim = c(-76, -74.5), ylim = c(39.7, 40.5), expand = FALSE) +
+    size = 3, color = "black", fontface = "bold"
+  ) +  
+  coord_sf(xlim = c(-76, -74.5), ylim = c(39.7, 40.5), expand = FALSE) + 
   theme_void(base_size = 15) +
   theme(
     legend.position = "bottom",
-    plot.title = element_text(hjust = 0.5, size = 16)) +
-  guides(color = guide_legend(
+    plot.title = element_text(hjust = 0.5, size = 16)
+  ) +
+  guides(color = guide_colorbar(
     title.position = "top",
-    override.aes = list(size = 3))) +
-  scale_color_viridis_c(option = "D", name = "Stars") +
+    barwidth = 15,
+    barheight = 0.5
+  )) +
+  scale_color_viridis_c(option = "D", name = "Stars") + 
   labs(
     title = "Restaurant Ratings in Southeastern Pennsylvania (By County)",
     color = "Stars"
