--- a/Report.Rmd
+++ b/Report.Rmd
@@ -6,6 +6,22 @@ output:
     toc: true
     toc_float: true
 ---
+## **Motivation**
+The aim of our project is to explore the relationship between restaurant pricing and customer ratings, and its reflection on the food culture and economic diversity of the city. Understanding the correlation between restaurant pricing and customer ratings has become critical as consumers demand more in terms of dietary choices and quality of life. We plan to analyze regional restaurant data to reveal potential patterns between price ranges and customer ratings, thereby providing the restaurant industry with a reference point for optimizing pricing and service enhancement.
+
+## **Related Work**
+We are inspired by a large body of research on the relationship between consumer behavior and commercial pricing. For example, certain studies suggest that high pricing may imply high quality, but in practice, consumer ratings may focus more on service experience and dining quality than on price. These studies emphasize the importance of analyzing price in conjunction with reviews. By integrating data from platforms such as Yelp, our project attempts to systematically analyze the relationship between price ranges and ratings of restaurants in the region, further enriching research in this area.
+
+
+## **Initial Questions**
+The purpose of this project is to answer the following question:
+
+- Is there a significant correlation between a restaurant's price range and customer ratings?
+
+- Can we reveal patterns in the cultural and economic diversity of urban food from price and rating datasets?
+
+- Through visualization and interactive tools, how can we help users quickly understand the distribution of prices and ratings of restaurants in different areas and choose the most compatible restaurant?
+
 ## **Data**
 ### **Source**
   The data for this project was obtained from [Yelp's Open Dataset](https://www.yelp.com/dataset) as JSON files which contain `150,346` stores including diverse types of shops and restaurants. Yelp provides detailed `58` variables on businesses, including restaurants, their locations, ratings, reviews, and various attributes like dog allows and price range. While the dataset does not include New York data, it provides comprehensive coverage of other regions, including PA.
@@ -35,4 +51,18 @@ The final dataset contains 7,801 observations and includes key variables such as
 - **Location Information**: `city`, `county`, `postal_code`, `longitude`, and `latitude.`
 - **Restaurant Attributes**: `Star`, `review_count`, `categories`, `price range`, and additional features like `delivery` or `takeout` availability.
 - **Hours of Operation**: `Everyday Hours`, `Weekday/Weekend hours`, and `Total hours`.
+
+
+## **R shiny App to choose the most compatible restaurant**
+We developed an R Shiny application to help users explore restaurants in Pennsylvania based on their preferences, including city, meal day, time range, category, price range, and stars. Users can interact with the app by selecting specific criteria to generate a tailored visualization of restaurant data. The app integrates various visualizations, including:
+
+- **Map Visualization**: Displays restaurant locations within the selected city. Color intensity reflects the number of reviews, allowing users to gauge popularity by geographic area.
+
+- **Category Frequency**: Shows the distribution of restaurant categories across the city, enabling users to identify popular cuisines.
+
+- **Price and Rating Distribution**: Highlights the relationship between price range and star ratings. Users can see the distribution of restaurants grouped by star ratings and price per person.
+
+Below is a screenshot to illustrate it.
+
+![](picture/shinyapp.jpg)
 
